--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 /public/bundles/
 /var/
 /vendor/
-.env
 
 ###< symfony/framework-bundle ###
 
@@ -20,3 +19,5 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+.gitignore
+.env
