--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -9,3 +9,6 @@ hello:
 helloname: 
     path: /helloname/{name}
     controller: App\Controller\HelloController::helloname
+app_logout:
+    path: /logout
+    methods: GET
